# evasion-hub

./: README.md  generate-tomcat-userpass.py  web-admin-brute-dict-top1002.txt  ybdt-dict-cleaner.py  ybdt-entire-dict.txt  ybdt-normal-dict.txt  字典去重工具.py  常见中国姓名top605.txt  生成数字字典.py
01-DLL-Hijacking/: README.md
01-DLL劫持/: 如何编写DLL文件.md
02-Function-Address-Locate/: README.md
02-ShellcodeLoader/: CShellcodeRC4EncryptDecrypt.md
02-内存申请/线程名调用/thread_namecaller/: CMakeLists.txt  rop_api.h  shellcode.h
02-内存申请/线程名调用/thread_receive/: CMakeLists.txt
02-字典收集/: readme.md
03-403绕过/: readme.md
03-Process-Inject/线程名调用/: CMakeLists.txt
03-Process-Inject/线程名调用/dll_inj/: CMakeLists.txt
03-Sandbox-Evasion/: README.md
04-AMSI-ETW-Patch/: README.md
05-Allocate-Write-Execute/: README.md
05-Host碰撞/: readme.md
06-Remote-Inject/: README.md  readme.md
07-Sleep-Mask/: README.md
07-实战收集/: readme.md
08-Code-Obfuscation/: README.md
09-EDR-Blindness/: README.md
1-SSH字典/: readme.md  ssh-fuzz-top52.txt
1-Web后台/: readme.md
1-Web字典/: readme.md
1-各类服务/: readme.md
1-数字相关字典/: readme.md
10-UAC-Bypass/: README.md
11-Privilege-Escalation/: README.md
12-Persistence/: README.md
13-Credential-Dump/: README.md
14-Evasion-with-LLM/: README.md
2-SSH/: readme.md
2-weak-pass-dict/: readme.md
2-弱口令/: dir-fuzz-top20101.txt
2-弱用户名/: username-fuzz-top2224.txt
3-Middleware字典/: readme.md  weblogic-fuzz-top14.txt
3-弱口令/: web-fuzz-top1005.txt
4-leak-dict/: 1-通过乌云漏洞库收集账号密码.md  readme.md
4-弱路径名/: web-path-top23721.txt
4-泄露密钥/: 2-通过APK获取密钥等信息.md  readme.md
5-弱目录名/: readme.md
6-厂商设备/: readme.md
6-用户名字典/: readme.md  username-top2224.txt  常见中国人姓名-fuzz-top3605（未去重）.txt
Linux下限制可执行文件落地绕过/: Linux无文件落地任意二进制执行.docx  总结思考.md
Mimikatz源码免杀/: readme.md
Misc/: README.md
MySQL/: mysql密码-fuzz-top2791.txt  readme.md
Nim语言学习/: nim语言学习一.md  nim语言学习二.md
ShellcodeLoader/: CShellcodeXOREncryptDecrypt.md
Tomcat/: generate-tomcat-userpass.py  readme.md
WEB/: digital_dict_generator.py  readme.md  本地文件包含（Linux）-fuzz-top.txt  本地文件包含（Windows）-fuzz-top27.txt  网站备份-fuzz-top3618.txt  网站备份-fuzz-top3639.txt  网站备份目录文件-fuzz-top2962.txt  网站目录-fuzz-top20101.txt
WebLogic/: readme.md
Windows PE学习/: Windows PE学习笔记.md
assets/: 自动化资产收集 .xmind
full-dict/: README.md
full-weak/: readme.md
weak-dict/: README.md
ybdt-dict-cleaner/: readme.md
厂商设备/: default-user-pass.txt  readme.md
各种服务常见口令/: tomcat-weak-pass.txt
字典去重/: 去重后的字典.txt
小技巧/: C++输入输出二进制文件.md  关闭控制台窗口的2种实现方式.md
恶意软件高级技术之利用NtReadVirtualMemory实现IAT中规避高危API/: resolve.c
数字相关字典/: readme.md
(+169 files in other folders)
